# ESP32S3_video

./: ESP32_S3_UNIFIED_FIRMWARE_PLAN  OV3660_ADAPTATION_GUIDE.md  PROJECT_SUMMARY.md
hx-esp32-cam-fpv/: .gitignore  .gitmodules  README.md
hx-esp32-cam-fpv/air_firmware_esp32cam/: esp32-cam-fpv-esp32cam.code-workspace  platformio.ini  platformio_upload.py  sdkconfig.defaults  sdkconfig.esp32cam
hx-esp32-cam-fpv/air_firmware_esp32s3sense/: esp32-cam-fpv-esp32s3sense.code-workspace  partitions.csv  platformio.ini  sdkconfig.defaults
hx-esp32-cam-fpv/air_firmware_esp32s3sense/main/: CMakeLists.txt
hx-esp32-cam-fpv/air_firmware_esp32s3sense_ov3660/: platformio.ini
hx-esp32-cam-fpv/air_firmware_esp32s3sense_ov5640/: .editorconfig  esp32-cam-fpv-esp32s3sense_ov5640.code-workspace  platformio.ini  sdkconfig.defaults  sdkconfig.esp32s3sense
hx-esp32-cam-fpv/components/common/: CMakeLists.txt  avi.cpp  avi.h  circular_buffer.cpp  circular_buffer.h  fec.cpp  fec.h  fec_codec.cpp  fec_codec.h  hx_mavlink_parser.cpp  hx_mavlink_parser.h  jpeg_parser.cpp  jpeg_parser.h  packet_filter.cpp  packet_filter.h  packets.cpp  packets.h  safe_printf.h  structures.h  util.cpp  util.h  vcd_profiler.cpp  vcd_profiler.h
hx-esp32-cam-fpv/doc/: adding_gs_software_to_ruby_sd_radxa3.md  adding_gs_software_to_ruby_sd_rpi.md  building_gs_sd_radxa_3w.md  building_gs_sd_rpi.md  composite_output.md  connecting_fan.md  development.md  flashing_esp32_cam.md  flashing_esp32s3sense.md  ov5640.md  (+9 more)
release/: BUILD_INSTRUCTIONS.md  FLASHING_INSTRUCTIONS.md  README.md  TESTING_GUIDE.md
(+74 files in other folders)
